# duplicate-file-finder

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
dupfinder/: __init__.py  cli.py  hasher.py  models.py
duplicate_file_finder/dupfinder/: cli.py  hasher.py
duplicate_file_finder/sample_data/backups/: project_notes_backup.txt
duplicate_file_finder/sample_data/documents/: meeting_notes.txt  readme_draft.txt
duplicate_file_finder/tests/: test_hasher.py
sample_data/photos/: description.txt
tests/: test_cli.py
